force-app/main/default/objects/Application_Settings__mdt/Application_Settings__mdt.object-meta.xml
<CustomObject>
    <label>Application Settings</label>
    <pluralLabel>Application Settings</pluralLabel>
    <description>Global configuration settings for DevOps Compass application</description>
</CustomObject>