force-app/main/default/objects/Application_Settings__mdt/fields/Dashboard_Refresh__c.field-meta.xml
<CustomField>
    <fullName>Dashboard_Refresh__c</fullName>
    <label>Dashboard Refresh (Minutes)</label>
    <description>Dashboard auto-refresh interval in minutes</description>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
</CustomField>