force-app/main/default/objects/Application_Settings__mdt/fields/Default_Date_Range__c.field-meta.xml
<CustomField>
    <fullName>Default_Date_Range__c</fullName>
    <label>Default Date Range (Days)</label>
    <description>Default date range for queries in days</description>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
</CustomField>