force-app/main/default/objects/Application_Settings__mdt/fields/Default_Sync_Interval__c.field-meta.xml
<CustomField>
    <fullName>Default_Sync_Interval__c</fullName>
    <label>Default Sync Interval (Minutes)</label>
    <description>Default synchronization interval in minutes</description>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
</CustomField>