force-app/main/default/objects/Application_Settings__mdt/fields/Enable_Deployments__c.field-meta.xml
<CustomField>
    <fullName>Enable_Deployments__c</fullName>
    <label>Enable Deployment Tracking</label>
    <description>Feature toggle for deployment tracking</description>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>