force-app/main/default/objects/Application_Settings__mdt/fields/Enable_DORA__c.field-meta.xml
<CustomField>
    <fullName>Enable_DORA__c</fullName>
    <label>Enable DORA Metrics</label>
    <description>Feature toggle for DORA metrics calculation</description>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>