force-app/main/default/objects/Application_Settings__mdt/fields/GitHub_Base_URL__c.field-meta.xml
<CustomField>
    <fullName>GitHub_Base_URL__c</fullName>
    <label>GitHub Base URL</label>
    <description>Base URL for GitHub API (e.g., https://api.github.com)</description>
    <type>Text</type>
    <length>255</length>
</CustomField>