force-app/main/default/objects/Application_Settings__mdt/fields/Stale_PR_Days__c.field-meta.xml
<CustomField>
    <fullName>Stale_PR_Days__c</fullName>
    <label>Stale PR Threshold (Days)</label>
    <description>Number of days before a PR is considered stale</description>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
</CustomField>